2A/05_Projet_GL/src/test/deca/context/invalid/complet/31_param_non_definie.deca
// Description :
//    utilisation d'une var non define dans MethodBody 
// Resultats :
//    ligne 11 : b identificateur non déclaré
// Historique :
//  cree le 16/01/2024

class A {
    int x ; 
    void get(int a )
    {
        this.x = a + b ; 
    }
}